.github/scripts/tests/fixtures/api-impl-006/fail/swift-distinct-causes/Package.swift
// swift-tools-version: 6.3.1

import PackageDescription

let package = Package(
    name: "swift-distinct-causes",
    targets: [.target(name: "Fixture Module")]
)
